# lopen-memory

./: Cargo.toml  README.md  deny.toml  smoke_test.sh
.github/hooks/: commit.json  hooks.json
.github/workflows/: pr-check.yml  release.yml
scripts/: format.sh  pre-commit.sh  validate-integrity.sh
skill/: SKILL.md
skill/references/: GUIDE.md
src/: db.rs  main.rs  output.rs  resolve.rs  skill.rs  state.rs
src/models/: feature.rs  mod.rs  module.rs  project.rs  research.rs  task.rs
