[package]
name = "lopen-memory"
version = "1.0.0-alpha"
edition = "2021"
license = "GPL-3.0-only"

[[bin]]
name = "lopen-memory"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4", features = ["serde"] }
